--- a/apps/my-app-react-17/package.json
+++ b/apps/my-app-react-17/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "my-app-react-17",
   "version": "1.0.0",
   "description": "An example application that consumes the my-controls library",
   "license": "MIT",
@@ -10,7 +10,7 @@
   "dependencies": {
     "my-controls": "^1.0.0",
     "whatwg-fetch": "^3.0.0",
-    "react": "16.8.0"
+    "react": "17.0.0"
   },
   "devDependencies": {
     "typescript": "^3.0.3"
