--- a/libraries/my-controls/package.json
+++ b/libraries/my-controls/package.json
@@ -6,12 +6,14 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "build": "node_modules/.bin/my-build",
+    "build": "echo my-build",
     "my-bulk-command": "node_modules/.bin/my-bulk-command"
   },
   "dependencies": {},
+  "peerDependencies": {
+    "react": ">16.0.0"
+  },
   "devDependencies": {
-    "my-toolchain": "^1.0.0",
     "typescript": "^3.0.3"
   }
 }
